CoreMigration/K8s/rancher/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifiedloginlanding-api-$(environmentName)
  # namespace: unified-login
  labels:
    product: une
    module: unifiedloginlanding
    location: rke2
    type: web
    os: linux
    environment: $(environmentName)
    app: unifiedloginlanding-api
    version: v1
spec:
  replicas: $(K8s.LandingApiReplicas)
  selector:
    matchLabels:
      product: une
      module: unifiedloginlanding
      location: rke2
      type: web
      os: linux
      app: unifiedloginlanding-api
      environment: $(environmentName)
  template:
    metadata:
      labels:
        product: une
        module: unifiedloginlanding
        location: rke2
        type: web
        os: linux
        environment: $(environmentName)
        app: unifiedloginlanding-api
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 10000       
      containers:
      - name: unifiedloginlanding-api
        securityContext:          
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        image: $(K8s.LandingApiImage):$(BUILD_BUILDNUMBER) 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: health-check       
        
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
        
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: health-check           
        #   initialDelaySeconds: 15
        #   periodSeconds: 600
        #   timeoutSeconds: 3
        #   failureThreshold: 1
        
        # readinessProbe:
        #   httpGet:
        #     path: /health/ready
        #     port: 8080
        #     scheme: HTTP
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        #   timeoutSeconds: 3
        #   failureThreshold: 3
        
        # startupProbe:
        #   httpGet:
        #     path: /health/startup
        #     port: 8080
        #     scheme: HTTP
        #   initialDelaySeconds: 0
        #   periodSeconds: 10
        #   timeoutSeconds: 3
        #   failureThreshold: 30
