CoreMigration/K8s/rancher/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifiedloginlanding-api-service-$(environmentName)
  # namespace: unified-login
  labels:
    app: unifiedloginlanding-api
    product: une
    module: unifiedloginlandingapi
    location: rke2    
    environment: $(environmentName)
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: metrics
  selector:
    app: unifiedloginlanding-api
    product: une
    module: unifiedloginlandingapi
    location: rke2
    environment: $(environmentName)
    type: web
    os: linux
