CoreMigration/K8s/rancher/entapi.httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifiedloginlanding-apienterprise-httproute-$(environmentName)
  # namespace: unified-login
  labels:
    product: une
    module: unifiedloginlanding-apienterprise
    location: rke2
    environment: $(environmentName)
spec:
  hostnames:
    - $(Server.ApiHostName)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: $(K8s.Namespace)
      namespace: gateways
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: unifiedloginlanding-apienterprise-service-$(environmentName)
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
