CoreMigration/K8s/rancher/landing-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifiedloginlanding-api-$(environmentName)
  # namespace: unified-login
  labels:
    product: une
    module: unifiedloginlanding
    location: rke2
    type: web
    os: linux
    environment: $(environmentName)
    app: unifiedloginlanding-api
    version: v1
spec:
  replicas: $(K8S_API_REPLICAS)
  selector:
    matchLabels:
      product: une
      module: unifiedloginlanding
      location: rke2
      type: web
      os: linux
      environment: $(environmentName)
  template:
    metadata:
      labels:
        product: une
        module: unifiedloginlanding
        location: rke2
        type: web
        os: linux
        environment: $(environmentName)
        app: unifiedloginlanding-api
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 10000
      containers:
      - name: unifiedloginlanding-api
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
        image: $(K8s.LandingApiImage)/api:${BUILD_BUILDNUMBER} 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8081
          name: metrics
          protocol: TCP
        
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        
        startupProbe:
          httpGet:
            path: /health/startup
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: unifiedloginlanding-api-service-$(environmentName)
  # namespace: unified-login
  labels:
    app: unifiedloginlanding-api
    product: une
    module: unifiedloginlandingapi
    location: rke2    
    environment: $(environmentName)
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: metrics
  selector:
    app: unifiedloginlanding-api
    product: une
    module: unifiedloginlandingapi
    location: rke2
    environment: $(environmentName)
    type: web
    os: linux
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifiedloginlanding-api-httproute-$(environmentName)
  # namespace: unified-login
  labels:
    product: une
    module: unifiedloginlandingapi
    location: rke2
    environment: $(environmentName)
spec:
  hostnames:
    - $(Server.ApiHostName)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: $(K8s.Namespace)
      namespace: gateways
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: unifiedloginlanding-api-service-$(environmentName)
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
